src/test/ui/issues/issue-16922.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/issue-16922.rs:4:14
   |
LL |     Box::new(value) as Box<dyn Any>
   |     ---------^^^^^-
   |     |        |
   |     |        ...but this borrow...
   |     this is `'static`...
   |
note: ...can't outlive the anonymous lifetime #1 defined on the function body at 3:1
  --> $DIR/issue-16922.rs:3:1
   |
LL | / fn foo<T: Any>(value: &T) -> Box<dyn Any> {
LL | |     Box::new(value) as Box<dyn Any>
LL | |
LL | | }
   | |_^
help: you can add a bound to the returned `dyn Trait` to make it last less than `'static` and match the anonymous lifetime #1 defined on the function body at 3:1
   |
LL | fn foo<T: Any>(value: &T) -> Box<dyn Any + '_> {
   |                                          ^^^^

error: aborting due to previous error

